# TweetFavTracker

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/tweetfavtracker/: __init__.py  main.py
src/tweetfavtracker/static/: style.css
src/tweetfavtracker/templates/: index.html  likes.html
